fixing load transition & overflow hidden when gallery popup

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 }
 
 html {
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   /* font size 10px in 62.5% */
   font-size: 62.5%;
   scroll-behavior: smooth;
@@ -30,7 +30,6 @@ html {
   z-index: 9999;
   position: fixed;
   flex-direction: column;
-  transition: 1.5s;
 }
 
 .loader img {
